lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab2-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api/consumer       # шлях по якому відбувається перенаправлення на сервіс
            pathType: Prefix           # все, що починається з /api буде направлено на сервіс demo-service. Альтернативно можна використовувати Exact та ImplementationSpecific
            backend:
              service:
                name: consumer-service # ім'я сервісу
                port:
                  number: 80           # порт на якому запущено сервіс
          - path: /api/producer
            pathType: Prefix
            backend:
              service:
                name: producer-service
                port:
                  number: 80
